# mypract

./: .gitignore  AbCodility.cpp  AbCodility.h  AbbreviationProblem.cpp  AbbreviationProblem.h  ArrayManipulation.cpp  ArrayManipulation.h  CMakeLists.txt  Candies.cpp  Candies.h  ChangeMaker.cpp  ChangeMaker.h  CoinChangeProplem.cpp  CoinChangeProplem.h  CountRectangles.cpp  CountRectangles.h  CousinsBinaryTree.cpp  CousinsBinaryTree.h  ExaWizards.cpp  ExaWizards.h  FindIfPathExistsGraph.cpp  FindIfPathExistsGraph.h  Graph.cpp  Graph.h  KnapsackProblem.cpp  KnapsackProblem.h  LinkList2Sum.cpp  LinkList2Sum.h  MaxProfit.cpp  MaxProfit.h  MaxSumArray.cpp  MaxSumArray.h  MaxSumNoAdjacentArray.cpp  MaxSumNoAdjacentArray.h  MinAbs.cpp  MinAbs.h  MinBribes.cpp  MinBribes.h  NumStrings.cpp  NumStrings.h  (+35 more)
tests/: AbCodilityTest.cpp  AbbreviationProblemTest.cpp  ArrayManipulationTest.cpp  CMakeLists.txt  CoinChangeProblemTest.cpp  CountRectanglesTest.cpp  CousinsBinaryTreeTest.cpp  ExaWizardsTest.cpp  FindIfPathExistsGraphTest.cpp  KnapsackProblemTest.cpp  LinkList2SumTest.cpp  NumStringsTest.cpp  RemoveDuplicatesTest.cpp  SortBalanceParenthesesTest.cpp  SubStringSumTest.cpp  TestUtil.cpp  TestUtil.h  WaterAreaTest.cpp  codilityTest.cpp  graphtest.cpp  maxarratsumtest.cpp  testsample.cpp
tests/data/: maxsumdata4.txt
